styles for anchor tag - to fix the scrollbar
git-svn-id: https://svn.syslab.com/svn/syslabcom/recensio.theme/trunk@7351 51ee9ba4-e84d-4896-84de-354f1821c169

--- a/recensio/theme/browser/stylesheets/main.css
+++ b/recensio/theme/browser/stylesheets/main.css
@@ -2514,8 +2514,8 @@ body.template-newsletter-view button {
 }
 
 .plonepopup .mceMiddle {
-height:85%;
-width:85%;
+height:85% !important;
+width:85% !important;
 }
 
 /* Use these classes to set the width of a column. */
